# lesson12.2

./: pyproject.toml
tests/: test_arrs.py  test_dicts.py
utils/: dicts.py
