[tool.poetry]
name = "new-lesson12-2"
version = "0.1.0"
description = ""
authors = ["Varda666 <oksana.aeshina666@gmail.ru>"]
readme = "README.md"
packages = [{include = "new_lesson12"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
